--- a/apifaeterj/src/components/Footer/Footer.module.scss
+++ b/apifaeterj/src/components/Footer/Footer.module.scss
@@ -4,6 +4,8 @@ footer{
   display:flex;
   align-items: center;
   justify-content: center;
+  // clear: both;
+  // position: relative;
   // position: absolute;
   // bottom: 0;
   background-color: #051933;
