--- a/src/components/Infos/Infos.module.scss
+++ b/src/components/Infos/Infos.module.scss
@@ -10,6 +10,7 @@
     // height: 19rem;
     width: 22rem;
     margin: 2rem;
+    padding: 1rem 0;
     border-radius: 0.75rem;
     color: #093366;
     border: 1px solid #093366;
@@ -42,7 +43,7 @@
       height: 2rem;
       width: 15rem;
       padding-left: 0.5rem;
-      margin: 0.5rem;
+      margin: 0.75rem;
       border: 1px solid #093366;
       border-radius: 5px;
       box-shadow: 0px 3px 6px #00000029;
@@ -57,6 +58,20 @@
       border-radius: 5px;;
       background:#093366;
       color: aliceblue;
+    }
+
+    .desativado{
+      width: 100%;
+      font-size: 1.5rem;
+      margin: 0.2rem 0 0 0;
+      color: #093366;
+      border: none;
+      box-shadow: none;
+      text-align: center;
+      font-weight: normal;
+    }
+    .ativado{
+      
     }
   }
 }
