att layout posts

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,24 +1,28 @@
-.content{
-  font-family: "Roboto";
-  // position: relative;
-  // min-height: 100vh;
-  // height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
-  font-size: 2rem;
-  padding: 2rem;
-  text-align: center;
-  color: #092346;
-}
+// .content{
+//   font-family: "Roboto";
+//   // position: relative;
+//   // min-height: 100vh;
+//   // height: 100vh;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   flex: 1;
+//   font-size: 2rem;
+//   padding: 2rem;
+//   text-align: center;
+//   color: #092346;
+// }
 
-h1{
-  font-size: 2rem;
-}
+// .titulo{
+//   font-size: 2rem;
+// }
 
-img{
+// .corpo{
+//   font-size: 1.5rem;
+// }
+
+// img{
   
-  height: 250px;
-  width: 250px;
-}
+//   height: 250px;
+//   width: 250px;
+// }
