--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 footer{
-  height: 4rem;
+  height: 5rem;
   width: 100%;
   display:flex;
   align-items: center;
@@ -11,8 +11,11 @@ footer{
   background-color: #051933;
 
   .text{
-    color: aliceblue;
     font: 1rem "Roboto";
+    flex-direction: column;
+    color: aliceblue;
+    letter-spacing: 0.05rem;
+    line-height: 1.5;
   }
 
   div{
