--- a/src/components/Infos/Infos.module.scss
+++ b/src/components/Infos/Infos.module.scss
@@ -1,4 +1,84 @@
 .container{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+}
+
+.infosUser{
+  width: 100%;
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  font-weight: normal;
+  color: #093366;
+  margin-top: 1rem;
+  
+  span{
+    margin: 0.5rem;
+  }
+  
+  button{
+    width: 5rem;
+    margin: 0.5rem;
+  }
+
+  .infoBotao{
+    display: flex;
+    justify-content: center;
+  }
+
+  .welcome{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span{
+      margin-left: 1rem;
+      font-size: 1.5rem;
+    }
+
+    input{
+      height: 2rem;
+      width: auto;
+      padding-left: 0.5rem;
+      margin: 0.75rem;
+      border: 1px solid #093366;
+      border-radius: 5px;
+      box-shadow: 0px 3px 6px #00000029;
+      
+    
+    }
+    
+    .desativado{
+      // width: 100%;
+      font-size: 1.5rem;
+      margin-left: -0.5rem;
+      color: #093366;
+      border: none;
+      box-shadow: none;
+      text-align: start;
+      font-weight: normal;
+    }
+    .ativado{
+      
+    }
+  }
+  
+}
+
+.botao{
+  height: 2rem;
+  width: 15rem;
+  margin: 0.5rem 0 1rem 0;
+  border: none;
+  border-radius: 5px;;
+  background:#093366;
+  color: aliceblue;
+}
+
+.cards{
   // height: 50vh;
   display: flex;
   flex-direction: flex;
@@ -6,7 +86,7 @@
   align-items: center;
   justify-content: center;
   
-  .content{
+  .card{
     // height: 19rem;
     width: 22rem;
     margin: 2rem;
@@ -31,47 +111,13 @@
       margin: 0.5rem 0;
     }
 
-    .anotacoes{
-      height: 10rem;
-      width: 15rem;
-      margin: 0.5rem;
-      word-break: break-word;
-      border: 1px solid #093366;
-    }
-
-    input{
-      height: 2rem;
-      width: 15rem;
-      padding-left: 0.5rem;
-      margin: 0.75rem;
-      border: 1px solid #093366;
-      border-radius: 5px;
-      box-shadow: 0px 3px 6px #00000029;
-
-    }
-
-    button{
-      height: 2rem;
-      width: 15rem;
-      margin: 0.5rem 0 1rem 0;
-      border: none;
-      border-radius: 5px;;
-      background:#093366;
-      color: aliceblue;
-    }
-
-    .desativado{
-      width: 100%;
-      font-size: 1.5rem;
-      margin: 0.2rem 0 0 0;
-      color: #093366;
-      border: none;
-      box-shadow: none;
-      text-align: center;
-      font-weight: normal;
-    }
-    .ativado{
-      
-    }
+    // .anotacoes{
+    //   height: 10rem;
+    //   width: 15rem;
+    //   margin: 0.5rem;
+    //   word-break: break-word;
+    //   border: 1px solid #093366;
+    // }
+    
   }
 }
