--- a/src/components/Infos/Infos.module.scss
+++ b/src/components/Infos/Infos.module.scss
@@ -19,20 +19,24 @@
     margin: 0.5rem;
   }
   
-  button{
-    width: 5rem;
-    margin: 0.5rem;
-  }
+  // button{
+  //   width: 5rem;
+  //   margin: 0.5rem;
+  // }
 
   .infoBotao{
     display: flex;
     justify-content: center;
+    margin-top: -3.25rem;
+  }
+
+  .welcomeContent{
+    width: 50%;
   }
 
   .welcome{
     display: flex;
     align-items: center;
-    justify-content: center;
 
     span{
       margin-left: 1rem;
@@ -52,17 +56,21 @@
     }
     
     .desativado{
-      // width: 100%;
       font-size: 1.5rem;
+      width: 95%;
       margin-left: -0.5rem;
       color: #093366;
       border: none;
       box-shadow: none;
       text-align: start;
       font-weight: normal;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
     }
     .ativado{
-      
+      color: #093366;
     }
   }
   
@@ -70,16 +78,28 @@
 
 .botao{
   height: 2rem;
-  width: 15rem;
+  width: 5rem;
+  margin: 0.5rem;//0.5rem 0 1rem 0;
+  border: none;
+  border-radius: 5px;;
+  background:#093366;
+  color: aliceblue;
+
+}
+
+.botaoDesativado{
+  height: 2rem;
+  width: 0;
   margin: 0.5rem 0 1rem 0;
   border: none;
   border-radius: 5px;;
   background:#093366;
   color: aliceblue;
+  visibility: hidden;
 }
 
 .cards{
-  // height: 50vh;
+  min-height: 13rem;
   display: flex;
   flex-direction: flex;
   flex-wrap: wrap;
